@@ -12,8 +12,8 @@ Error: This pattern matches values of type (int s, int s) eq
 #     Characters 120-124:
   struct let f : ('a S.s, 'a S.t) eq -> unit = function Refl -> () end;;
                                                         ^^^^
-Error: This pattern matches values of type (ex#0 S.s, ex#1 S.t) eq
+Error: This pattern matches values of type ($0 S.s, $1 S.t) eq
        but a pattern was expected which matches values of type
          ('a S.s, 'a S.t) eq
-       The type constructor ex#0 would escape its scope
+       The type constructor $0 would escape its scope
 # 
